change color themes

--- a/src/app.css
+++ b/src/app.css
@@ -7,5 +7,8 @@
 	--shadow-header: 0px 0px 10px 3px rgba(0, 0, 0, 0.69);
 }
 @plugin 'daisyui' {
-	themes: light, dark, dracula;
+	themes:
+		light --default,
+		dark --prefersdark,
+		dracula;
 }
